fixed some typos and tweaked some sentences

--- a/notebooks/Structure_of_Convolutional_Neural_Networks.ipynb
+++ b/notebooks/Structure_of_Convolutional_Neural_Networks.ipynb
@@ -289,7 +289,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Mutiple Input Channels\n",
+    "### Multiple Input Channels\n",
     "\n",
     "What would a multiple-channel input layer look like?  Suppose our input layer has two channels instead of just one.  We would then have two sets (or \"banks\", or \"sublayers\", or, well, \"channels\") of seven input units each:\n",
     "\n",
@@ -374,7 +374,7 @@
    "source": [
     "### Size of the Input Layer\n",
     "\n",
-    "Suppose we increase the size of the input layer, keeping the receptive field size (as specified by the ``kernel_size`` parameter in our network definition) and the number of input channels the same.  How would this change the total number of trainable parameters in the network?  For example, suppose we increase the input layer size from 7 to 1000 units, while still maintaining receptive fields of size 3.  To completely cover the input space with receptive fields, many more output units will clearly be required, but the exact number is determined by the receptive field size.  In our case, with size-3 receptive fields, the output layer size will shrink by 2 units, for a total of 998 units instead of 1000.  (For clarity, only one input channel is shown in the picture below.)\n",
+    "Suppose we increase the size of the input layer, keeping the receptive field size (as specified by the ``kernel_size`` parameter in our network definition) and the number of input channels the same.  How would this change the total number of trainable parameters in the network?  For example, suppose we increase the input layer size from 7 to 1000 units, while still maintaining receptive fields of size 3.  To completely cover the input space with receptive fields, many more output units will clearly be required, but the exact number is determined by the receptive field size.  In our case, with receptive fields of size 3, the output layer size will shrink by 2 units, for a total of 998 units instead of 1000.  (For clarity, only one input channel is shown in the picture below.)\n",
     "\n",
     "<center><img src=\"images/layer_size_reduction.png\" width=\"50%\"></center>\n",
     "\n",
@@ -500,11 +500,11 @@
    "source": [
     "### A Two-Dimensional Convolutional Layer\n",
     "\n",
-    "The examples above illustrate most of the key architectural concepts of convolutional layers.  However, in practice **2-dimensional** convolutional layers are much more common than 1-dimensional layers, because most convolutional neural networks are applied to the task of image processing.  To understand how 2-dimensional layers work, just increase the dimensionality of the input layer by one.  Instead of the input units being arranged in a linear sequence as in the examples above, they will be arranged in an $n \\times m$ \"sheet\" of units, where each unit corresponds to an individual pixel in an input image:\n",
+    "The examples above illustrate most of the key architectural concepts of convolutional layers.  However, in practice **2-dimensional** convolutional layers are much more common than 1-dimensional layers, because most convolutional neural networks are applied to the task of image processing.  To understand how 2-dimensional layers work, just increase the dimensionality of the input layer by one.  Instead of the input units being arranged in a linear sequence as in the examples above, they will be arranged in a \"sheet\" of units, where each unit might correspond to an individual pixel in an input image:\n",
     "\n",
     "<center><img src=\"images/input_sheet_2d.png\" width=\"30%\"></center>\n",
     "\n",
-    "Different output units are connected to different local 2-D receptive fields in the input image, which means that the output units themselves have a 2-D topological arrangement that mirrors the arrangement of the input units.  Furthermore, all of the output units share a common set of weight and bias parameters.  For example, three different output units, each with 3 $\\times$ 3 receptive fields, are shown below.  Each unit shares the same set of 9 connection weights (shown in red) and 1 bias value (not shown).\n",
+    "Different output units are connected to different local 2D receptive fields in the input image, which means that the output units themselves have a 2D topological arrangement that mirrors the arrangement of the input units.  Furthermore, all of the output units share a common set of weight and bias parameters.  For example, three different output units, each with 3 $\\times$ 3 receptive fields, are shown below.  Each unit shares the same set of 9 connection weights (shown in red) and 1 bias value (not shown).\n",
     "\n",
     "<table width=\"80%\">\n",
     "<tr>\n",
@@ -514,7 +514,7 @@
     "</tr>\n",
     "</table>\n",
     "\n",
-    "If the input layer has multiple channels (*i.e.* its depth is greater than 1), then each output unit connects to the input units *at all depths* of the receptive field.  Thus you can think of a unit in a 2D convolutional layer as receiving input from a 3-dimensional **volume** of elements in the previous layer.  For example, color RGB images have three channels specifying the pixel intensities for red, green, and blue.  With three input channels, a receptive field of size 3 $\\times$ 3 would constitute a volume of 27 pixel values, and the total number of trainable parameters would be: (3 $\\times$ 3) weights $\\times$ 3 channels + 1 bias = 28 parameters.  (For clarity, the receptive field connections from channels 0 and 1 are not shown in the picture below.)\n",
+    "If the input layer has multiple channels (*i.e.* its depth is greater than 1), then each output unit connects to the input units *at all depths* of the receptive field.  Thus you can think of a unit in a 2D convolutional layer as receiving input from a 3-dimensional **volume** of units in the previous layer.  For example, color RGB images have three channels specifying the pixel intensities for red, green, and blue.  With three input channels, a receptive field of size 3 $\\times$ 3 would constitute a volume of 27 pixel values, and the total number of trainable parameters would be: (3 $\\times$ 3) weights $\\times$ 3 channels + 1 bias = 28 parameters.  (For clarity, the receptive field connections from channels 0 and 1 are not shown in the picture below.)\n",
     "\n",
     "<center><img src=\"images/input_sheet_2d_3channels.png\" width=\"40%\"></center>\n",
     "\n",
@@ -566,7 +566,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Adding another filter to the layer is like adding another set of output units with their own independent set of 28 trainable parameters, which are shared among all of the new output units, bringing the total number of layer parameters to 56.  The new output units constitute a new **output channel**, as in the picture below.  The 2-dimensional pattern of activation on each output channel represents a **feature map** of size 3 $\\times$ 3 computed from the 5 $\\times$ 5 input image.  In the picture, only some of the connections from the input layer to the output layer are shown for clarity.  Keep in mind that the connections also extend to the bottom two input channels as well.  Furthermore, the purple output units shown in the top output channel have their own set of connections to all three input channels as well.\n",
+    "Adding another filter to the layer is like adding another set of output units with their own independent set of 28 trainable parameters, which are shared among all of the new output units, bringing the total number of layer parameters to 56.  The new output units constitute a new **output channel**, as in the picture below.  The 2-dimensional pattern of activation on each output channel represents a **feature map** of size 3 $\\times$ 3 computed from the 5 $\\times$ 5 input image.  In the picture, only some of the connections from the input layer to the output layer are shown for clarity.  Keep in mind that the set of connections from output channel 0 also extends to the bottom two input channels as well.  Furthermore, the purple output units shown in the top output channel have their own separate set of connections to all three input channels as well.\n",
     "\n",
     "<center><img src=\"images/full_conv2d_2filters.png\" width=\"40%\"></center>"
    ]
@@ -688,7 +688,7 @@
    "source": [
     "### Self-Check 2\n",
     "\n",
-    "Suppose we create a 2D convolutional layer with 64 feature maps and 3 $\\times$ 3 receptive fields, and feed it color RGB images of size 224 $\\times$ 224 pixels.  How many trainable parameters will this layer have, and what size ?"
+    "Suppose we create a 2D convolutional layer with 64 filters and 3 $\\times$ 3 receptive fields, and feed it color RGB images of size 224 $\\times$ 224 pixels.  How many trainable parameters will this layer have, and what will be the size of the feature maps created by the layer?"
    ]
   },
   {
