having it draw the grid on the world, but there's a bug when you re-run it multiple times

--- a/notebooks/Coverage.ipynb
+++ b/notebooks/Coverage.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "'0.9.32'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -34,14 +34,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random seed set to: 7299110\n"
+      "Random seed set to: 3037513\n"
      ]
     }
    ],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -65,7 +65,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d2bd0331d2d549b9bb71337e65ede213",
+       "model_id": "96104f2d574349808f56ab76f672d845",
        "version_major": 2,
        "version_minor": 0
       },
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,6 +94,7 @@
     "    right = robot[1].get_distance()\n",
     "    x, y, direction = robot.get_pose()\n",
     "    robot.state[\"grid\"].update(x, y)\n",
+    "    robot.state[\"grid\"].draw()\n",
     "    # Save the robot's location only once per second\n",
     "    if left == robot[0].get_max() and right == robot[1].get_max() and \\\n",
     "        robot.state[\"timer\"] == 0:\n",
@@ -126,55 +127,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using random seed: 12\n",
-      "Using random seed: 61\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "65e86cee61e5486899146820dfaee9a3",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/600 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Simulation stopped at: 00:01:00.0; speed 207.62 x real time\n"
-     ]
-    }
-   ],
-   "source": [
-    "from random import randrange\n",
-    "\n",
-    "robot.state[\"timer\"] = 0\n",
-    "robot.state[\"grid\"] = Grid((10,10), (200, 200))\n",
-    "robot.state[\"debug\"] = True\n",
-    "\n",
-    "world.reset()\n",
-    "\n",
-    "world.set_seed(randrange(1,100)) # allow randomness\n",
-    "\n",
-    "world.seconds(60, [wander], real_time=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
@@ -182,34 +134,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0   0   0   0   0   0   0   0   0   0 \n",
-      "  0   0   0   0  45   0   0   7  35   0 \n",
-      "  0   0   0   4  38   0  23  43  35   0 \n",
-      "  0   0   0  22  17  22  36   0  22   0 \n",
-      "  0  31  35  40  35  73  23   7  17   0 \n",
-      "  0  98  35  31  28  11   3  24   0   0 \n",
-      "  0  42  38  51  20  21  23   3   0   0 \n",
-      "  0   6  42  11   0   0   0   0   0   0 \n",
-      "  0   0   0   0   0   0   0   0   0   0 \n",
-      "  0   0   0   0   0   0   0   0   0   0 \n",
-      "\n"
+      "Using random seed: 88\n",
+      "Using random seed: 51\n",
+      "Simulation stopped at: 00:01:00.0; speed 206.91 x real time\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.38"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "g = robot.state[\"grid\"]\n",
-    "g.show()\n",
-    "g.analyze_visits()"
+    "### BUG HERE, re-running this cell should reset the Grid because\n",
+    "### we are re-creating the Grid from scratch, reusing the orignal\n",
+    "### world\n",
+    "\n",
+    "from random import randrange\n",
+    "\n",
+    "robot.state[\"timer\"] = 0\n",
+    "robot.state[\"grid\"] = Grid((10,10), world)\n",
+    "robot.state[\"debug\"] = True\n",
+    "\n",
+    "world.reset()\n",
+    "world.set_seed(randrange(1,100)) # allow randomness\n",
+    "world.seconds(60, [wander], real_time=False)"
    ]
   },
   {
@@ -218,34 +162,37 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  0   0   0   0   0   0   0   0   0   0 \n",
+      "  0   0   2  46  43  47  41   4   0   0 \n",
+      "  0  15  24  19   3   0   6  43  10   0 \n",
+      "  0  83  28  18  48  51  46  27   8   0 \n",
+      "  0  50  33  37  61  51   0   0   0   0 \n",
+      "  0  21  48   8  15  20   0   0   0   0 \n",
+      "  0  69  43  24  28  20   0   0   0   0 \n",
+      "  0  53   0  13  36  28   0   0   0   0 \n",
+      "  0 480  40  10   0   0   0   0   0   0 \n",
+      "  0   0   0   0   0   0   0   0   0   0 \n",
+      "\n"
+     ]
+    },
+    {
      "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f16e7b127098425fa59482d7ce2b48da",
-       "version_major": 2,
-       "version_minor": 0
-      },
       "text/plain": [
-       "Figure(axes=[ColorAxis(scale=ColorScale(reverse=True, scheme='Greys')), Axis(scale=LinearScale()), Axis(orient…"
+       "0.43"
       ]
      },
+     "execution_count": 10,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from bqplot import pyplot as plt\n",
-    "from bqplot import ColorScale\n",
-    "from ipywidgets import Layout\n",
-    "import numpy as np\n",
-    "\n",
-    "fig = plt.figure(\n",
-    "    title='Coverage',\n",
-    "    layout=Layout(width='650px', \n",
-    "                  height='650px'),\n",
-    ")\n",
-    "plt.scales(scales={'color': ColorScale(scheme='Greys', reverse=True)})\n",
-    "heatmap = plt.heatmap(np.array(g.grid))\n",
-    "fig"
+    "g = robot.state[\"grid\"]\n",
+    "g.show()\n",
+    "g.analyze_visits()"
    ]
   },
   {
@@ -275,7 +222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.2"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
@@ -565,70 +512,80 @@
          "shape": [
           10
          ],
-         "type": null
+         "type": null,
+         "value": {}
         },
         {
          "dtype": "int32",
          "shape": [
           10
          ],
-         "type": null
+         "type": null,
+         "value": {}
         },
         {
          "dtype": "int32",
          "shape": [
           10
          ],
-         "type": null
+         "type": null,
+         "value": {}
         },
         {
          "dtype": "int32",
          "shape": [
           10
          ],
-         "type": null
+         "type": null,
+         "value": {}
         },
         {
          "dtype": "int32",
          "shape": [
           10
          ],
-         "type": null
+         "type": null,
+         "value": {}
         },
         {
          "dtype": "int32",
          "shape": [
           10
          ],
-         "type": null
+         "type": null,
+         "value": {}
         },
         {
          "dtype": "int32",
          "shape": [
           10
          ],
-         "type": null
+         "type": null,
+         "value": {}
         },
         {
          "dtype": "int32",
          "shape": [
           10
          ],
-         "type": null
+         "type": null,
+         "value": {}
         },
         {
          "dtype": "int32",
          "shape": [
           10
          ],
-         "type": null
+         "type": null,
+         "value": {}
         },
         {
          "dtype": "int32",
          "shape": [
           10
          ],
-         "type": null
+         "type": null,
+         "value": {}
         }
        ],
        "scales": {
@@ -641,14 +598,16 @@
         "shape": [
          10
         ],
-        "type": null
+        "type": null,
+        "value": {}
        },
        "y": {
         "dtype": "int32",
         "shape": [
          10
         ],
-        "type": null
+        "type": null,
+        "value": {}
        }
       }
      },
@@ -737,7 +696,8 @@
       "model_module_version": "1.5.0",
       "model_name": "ImageModel",
       "state": {
-       "layout": "IPY_MODEL_3bb8cadfc2044fc286f6bb61c49d72c5"
+       "layout": "IPY_MODEL_3bb8cadfc2044fc286f6bb61c49d72c5",
+       "value": {}
       }
      },
      "df7e12ac5b0f40e08417f86a0d06582e": {
