removed comment about bug, which is now fixed

--- a/notebooks/Coverage.ipynb
+++ b/notebooks/Coverage.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "'0.9.32'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -28,20 +28,20 @@
    "source": [
     "This program allows the robot to wander around an empty world.\n",
     "It uses a Grid imposed on the World to track the robot's location\n",
-    "over time. It plots a heat map of the locactions visted and computes \n",
-    "the pecentage of Grid locations visited."
+    "over time. It computes \n",
+    "the percentage of Grid locations visited."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random seed set to: 7013779\n"
+      "Random seed set to: 470787\n"
      ]
     }
    ],
@@ -57,15 +57,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b58029ebc57642cf9dad777dd7e07fcf",
+       "model_id": "b41028a9561148e9b0dfc8e61921bd7c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -83,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,44 +131,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using random seed: 7013779\n",
-      "Using random seed: 49\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9acf16d9abbc4e0c932529893f1a2aed",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/600 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Simulation stopped at: 00:01:00.0; speed 154.82 x real time\n"
+      "Using random seed: 18\n",
+      "Using random seed: 24\n",
+      "Simulation stopped at: 00:01:00.0; speed 249.65 x real time\n"
      ]
     }
    ],
    "source": [
-    "### BUG HERE, re-running this cell should reset the Grid because\n",
-    "### we are re-creating the Grid from scratch, reusing the orignal\n",
-    "### world\n",
-    "\n",
     "from random import randrange\n",
     "\n",
     "world.reset()\n",
@@ -178,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -186,33 +166,24 @@
      "output_type": "stream",
      "text": [
       "  0   0   0   0   0   0   0   0   0   0 \n",
-      "  0   0   0   0  12  39   2  32  33   0 \n",
-      "  0   0   0   0  35  42  28  24  13   0 \n",
-      "  0   0   0   0  25  22  75  54   0   0 \n",
-      "  0   0   0   0  16  52  24  18  48   0 \n",
-      "  0   0   0   0   0   1   0   0   5   0 \n",
+      "  0   0   0   0  52  60   0   0   0   0 \n",
+      "  0   0   0   8  34  38   2   0   0   0 \n",
+      "  0   0   0  21  17  53   0   0   0   0 \n",
+      "  0   0   0   0  27  62   0   0   0   0 \n",
+      "  0   0   0   0   0  22   0   0   0   0 \n",
+      "  0   0   0  28  24   5   0   0   0   0 \n",
+      "  0   0  31  70   0   0   0   0   0   0 \n",
+      "  0   0   0  46   0   0   0   0   0   0 \n",
       "  0   0   0   0   0   0   0   0   0   0 \n",
-      "  0   0   0   0   0   0   0   0   0   0 \n",
-      "  0   0   0   0   0   0   0   0   0   0 \n",
-      "  0   0   0   0   0   0   0   0   0   0 \n",
-      "\n"
+      "\n",
+      "Visited 18 percent of the world\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.21"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "g = robot.state[\"grid\"]\n",
     "g.show()\n",
-    "g.analyze_visits()"
+    "print(f\"Visited {int(g.analyze_visits()*100)} percent of the world\")"
    ]
   },
   {
@@ -242,7 +213,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.2"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
@@ -355,7 +326,8 @@
       "model_module_version": "1.5.0",
       "model_name": "ImageModel",
       "state": {
-       "layout": "IPY_MODEL_742ec5a5d24544f5a969cce8da1279a0"
+       "layout": "IPY_MODEL_742ec5a5d24544f5a969cce8da1279a0",
+       "value": {}
       }
      },
      "ebb40526330b498f8d8fddae898e30df": {
