updated print formatting to match our standard, updated some wording for clarification

--- a/notebooks/Braitenberg_Vehicles.ipynb
+++ b/notebooks/Braitenberg_Vehicles.ipynb
@@ -1,31 +1,17 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'0.9.14'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "from aitk.robots import World, Vehicle, LightSensor,SmellSensor,__version__\n",
-    "__version__"
+    "# Computational Essays on Artificial Intelligence"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Braitenberg Vehicles\n",
+    "## Braitenberg Vehicles\n",
     "\n",
     "This notebook explores some of the vehicles described by Valentino Braitenberg in his book entitled *Vehicles: Experiments in Synthetic Psychology*. "
    ]
@@ -58,7 +44,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In particular he considers wheeled machines, or robots, where the motor speeds of the robot's wheels are directly determined by the robot's sensors.  Braitenberg argues that simple changes in the configurations of how sensors affect motor speeds yield very different types of behavior from the robot. In these examples, we will use light sensors. Braitenberg numbered his different vehicles from simplest to more complex.  Vehicle 1 has only a single sensor and single wheel. We will skip this one and begin our exploration with Vehicle 2. "
+    "In particular he considers wheeled machines, or robots, where the motor speeds of the robot's wheels are directly determined by the robot's sensors.  Braitenberg argues that simple changes in the configurations of how sensors affect motor speeds yield very different types of behavior from the robot. In these examples, we will use light sensors. Braitenberg numbered his different vehicles from simplest to more complex.  Vehicle 1 has only a single sensor and single wheel. We will skip this one and begin our exploration with Vehicle 2.\n",
+    "\n",
+    "To experiment with these vehicles we will need to import a number of things from aitk.robots."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0.9.32'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from aitk.robots import World, Vehicle, LightSensor, SmellSensor, __version__\n",
+    "__version__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create a world and robot\n",
+    "\n",
+    "The world has a light source in the center, and the robot is equipped with two light sensors on its front left and front right."
    ]
   },
   {
@@ -70,7 +88,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random seed set to: 9468028\n"
+      "Random seed set to: 116515\n"
      ]
     }
    ],
@@ -108,7 +126,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d38093d036664a3990d46dda1f2b3371",
+       "model_id": "9df7f79df8864e73a0da24f10441a65e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -122,15 +140,6 @@
    ],
    "source": [
     "world.watch()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### A simple world and robot\n",
-    "\n",
-    "The world has a light source in the center, and the robot is equipped with two light sensors on its front left and front right. "
    ]
   },
   {
@@ -173,14 +182,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "def vehicle2a(robot):\n",
     "    left = robot[\"left-light\"].get_brightness()\n",
     "    right = robot[\"right-light\"].get_brightness()\n",
-    "    robot.speak(\"%d%d\" % (left*10, right*10))\n",
+    "    robot.speak(f\"{int(left*10)}{int(right*10)}\")\n",
     "    robot.motors(left, right)"
    ]
   },
@@ -188,40 +197,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "NOTE: Each vehicle will speak it's current left and right light readings as two numbers in a bubble as it moves. The higher the numbers the more light being sensed. A \"00\" indicates low light being sensed on both sides.  A \"51\" indicates that the light reading is stronger on the left than on the right. A \"99\" indicates that both sensors are reading very high light values."
+    "Each vehicle will speak it's current left and right light readings as two numbers in a bubble as it moves. The higher the numbers the more light being sensed. A \"00\" indicates low light being sensed on both sides.  A \"51\" indicates that the light reading is stronger on the left than on the right. A \"99\" indicates that both sensors are reading very high light values."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using random seed: 9468028\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3c9c791a6d964e4f9ddb36a4b8da9825",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Simulation stopped at: 00:00:06.8; speed 0.98 x real time\n"
+      "Using random seed: 116515\n",
+      "Simulation stopped at: 00:00:07.9; speed 0.97 x real time\n"
      ]
     }
    ],
@@ -234,6 +223,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**NOTE**: Each vehicle will run continually until you manually stop it. You can try re-starting it as many times as you'd like.\n",
+    "\n",
     "Braitenberg described the resulting behavior as **fear** because the robot moves quickly away from the light source and tries to hide in the corners."
    ]
   },
@@ -247,48 +238,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def vehicle2b(robot):\n",
     "    left= robot[\"left-light\"].get_brightness()\n",
     "    right = robot[\"right-light\"].get_brightness()\n",
-    "    robot.speak(\"%d%d\" % (left*10, right*10))\n",
+    "    robot.speak(f\"{int(left*10)}{int(right*10)}\")\n",
     "    robot.motors(right, left)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using random seed: 9468028\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5066d30f23db4016b3ce437b403f07ee",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Simulation stopped at: 00:00:05.5; speed 0.98 x real time\n"
+      "Using random seed: 116515\n",
+      "Simulation stopped at: 00:00:04.3; speed 0.96 x real time\n"
      ]
     }
    ],
@@ -323,48 +294,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "def vehicle3a(robot):\n",
     "    left= robot[\"left-light\"].get_brightness()\n",
     "    right = robot[\"right-light\"].get_brightness()\n",
-    "    robot.speak(\"%d%d\" % (left*10, right*10))\n",
+    "    robot.speak(f\"{int(left*10)}{int(right*10)}\")\n",
     "    robot.motors(1-left,1-right)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using random seed: 9468028\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7603563cd0f741ecba8884c71abf59f4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Simulation stopped at: 00:00:06.7; speed 0.98 x real time\n"
+      "Using random seed: 116515\n",
+      "Simulation stopped at: 00:00:02.1; speed 0.97 x real time\n"
      ]
     }
    ],
@@ -390,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,15 +354,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using random seed: 8985077\n",
-      "Simulation stopped at: 00:00:15.9; speed 0.97 x real time\n"
+      "Using random seed: 116515\n",
+      "Simulation stopped at: 00:00:02.2; speed 0.97 x real time\n"
      ]
     }
    ],
@@ -448,19 +399,19 @@
    "metadata": {},
    "source": [
     "## Vehicle 3c\n",
-    "Next, let's try to combine aspects from several of these simple vehicles into one more complex vehicle that responds to multiple sensors. Let's create a new world with two different colored lights, one red and one green, and two different sets of light sensors that are each sensitive to only one of these colors. "
+    "Next, let's try to combine aspects from several of these simple vehicles into a more complex vehicle that responds to multiple sensors. Let's create a new world with two different colored lights, one red and one green, and two different sets of light sensors that are each sensitive to only one of these colors. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random seed set to: 9905082\n"
+      "Random seed set to: 3115008\n"
      ]
     }
    ],
@@ -472,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,13 +437,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c42a0b3c518f4dfb9a53a2f8b381b572",
+       "model_id": "f53b549f3f954924afc909d57bab598d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -512,45 +463,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This vehicle has crossed excitatory connections from its green light sensors, making it respond aggressively towards the bulb (e.g. green means go). It also has straight inhibitory connections from its red light sensors, making it respond lovingly towards red light (e.g. red means slow/stop).  The motors will respond to the combination of these two factors, leading to more complex behaviors. "
+    "This vehicle has crossed excitatory connections from its green light sensors, making it respond aggressively towards the green bulb (e.g. green means go). It also has straight inhibitory connections from its red light sensors, making it respond lovingly towards red bulb (e.g. red means slow/stop).  The motors will respond to the combination of these two factors, leading to more complex behaviors. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "NOTE: This vehicle will speak a summary of its four sensors as four numbers.  The first two numbers represent its current left and right green light readings.  The second two numbers represent its current left and right red light readings. "
+    "This vehicle will speak a summary of its four sensors as four numbers.  The first two numbers represent its current left and right green light readings.  The second two numbers represent its current left and right red light readings. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "def vehicle3c(robot):\n",
-    "    L_green = robot[\"left-green\"].get_brightness()\n",
-    "    R_green = robot[\"right-green\"].get_brightness()\n",
-    "    L_red = robot[\"left-red\"].get_brightness()\n",
-    "    R_red = robot[\"right-red\"].get_brightness()\n",
-    "    L_speed = (R_green + 1-L_red)/2.0\n",
-    "    R_speed = (L_green + 1-R_red)/2.0\n",
-    "    robot.speak(\"%d%d%d%d\" % \\\n",
-    "        (L_green*10, R_green*10, L_red*10, R_red*10))\n",
+    "    L_gr = robot[\"left-green\"].get_brightness()\n",
+    "    R_gr = robot[\"right-green\"].get_brightness()\n",
+    "    L_rd = robot[\"left-red\"].get_brightness()\n",
+    "    R_rd = robot[\"right-red\"].get_brightness()\n",
+    "    L_speed = (R_gr + 1-L_rd)/2.0\n",
+    "    R_speed = (L_gr + 1-R_rd)/2.0\n",
+    "    s = f\"{int(L_gr*10)}{int(R_gr*10)}{int(L_rd*10)}{int(R_rd*10)}\"\n",
+    "    robot.speak(s)\n",
     "    robot.motors(L_speed,R_speed)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using random seed: 9905082\n",
-      "Simulation stopped at: 00:02:31.6; speed 0.97 x real time\n"
+      "Using random seed: 3115008\n",
+      "Simulation stopped at: 00:00:06.9; speed 0.98 x real time\n"
      ]
     }
    ],
